crates/gdsr/src/elements/snapshots/gdsr__elements__reference__tests__cell_ref_grid_expansion_with_origin_and_rotation.snap
---
source: crates/gdsr/src/elements/reference.rs
expression: flattened
---
[
    Polygon(
        Polygon {
            points: [
                Point {
                    x: Integer(
                        IntegerUnit {
                            value: 100,
                            units: 1e-9,
                        },
                    ),
                    y: Integer(
                        IntegerUnit {
                            value: 205,
                            units: 1e-9,
                        },
                    ),
                },
                Point {
                    x: Integer(
                        IntegerUnit {
                            value: 100,
                            units: 1e-9,
                        },
                    ),
                    y: Integer(
                        IntegerUnit {
                            value: 210,
                            units: 1e-9,
                        },
                    ),
                },
                Point {
                    x: Integer(
                        IntegerUnit {
                            value: 95,
                            units: 1e-9,
                        },
                    ),
                    y: Integer(
                        IntegerUnit {
                            value: 210,
                            units: 1e-9,
                        },
                    ),
                },
                Point {
                    x: Integer(
                        IntegerUnit {
                            value: 100,
                            units: 1e-9,
                        },
                    ),
                    y: Integer(
                        IntegerUnit {
                            value: 205,
                            units: 1e-9,
                        },
                    ),
                },
            ],
            layer: Layer(
                1,
            ),
            data_type: DataType(
                0,
            ),
            properties: [],
        },
    ),
]
