crates/gdsr/src/elements/snapshots/gdsr__elements__reference__tests__reference_flatten.snap
---
source: crates/gdsr/src/elements/reference.rs
expression: flattened
---
[
    Polygon(
        Polygon {
            points: [
                Point {
                    x: Integer(
                        IntegerUnit {
                            value: 0,
                            units: 1e-9,
                        },
                    ),
                    y: Integer(
                        IntegerUnit {
                            value: 0,
                            units: 1e-9,
                        },
                    ),
                },
                Point {
                    x: Integer(
                        IntegerUnit {
                            value: 10,
                            units: 1e-9,
                        },
                    ),
                    y: Integer(
                        IntegerUnit {
                            value: 0,
                            units: 1e-9,
                        },
                    ),
                },
                Point {
                    x: Integer(
                        IntegerUnit {
                            value: 10,
                            units: 1e-9,
                        },
                    ),
                    y: Integer(
                        IntegerUnit {
                            value: 10,
                            units: 1e-9,
                        },
                    ),
                },
                Point {
                    x: Integer(
                        IntegerUnit {
                            value: 0,
                            units: 1e-9,
                        },
                    ),
                    y: Integer(
                        IntegerUnit {
                            value: 0,
                            units: 1e-9,
                        },
                    ),
                },
            ],
            layer: Layer(
                1,
            ),
            data_type: DataType(
                0,
            ),
            properties: [],
        },
    ),
    Polygon(
        Polygon {
            points: [
                Point {
                    x: Integer(
                        IntegerUnit {
                            value: 0,
                            units: 1e-9,
                        },
                    ),
                    y: Integer(
                        IntegerUnit {
                            value: 10,
                            units: 1e-9,
                        },
                    ),
                },
                Point {
                    x: Integer(
                        IntegerUnit {
                            value: 10,
                            units: 1e-9,
                        },
                    ),
                    y: Integer(
                        IntegerUnit {
                            value: 10,
                            units: 1e-9,
                        },
                    ),
                },
                Point {
                    x: Integer(
                        IntegerUnit {
                            value: 10,
                            units: 1e-9,
                        },
                    ),
                    y: Integer(
                        IntegerUnit {
                            value: 20,
                            units: 1e-9,
                        },
                    ),
                },
                Point {
                    x: Integer(
                        IntegerUnit {
                            value: 0,
                            units: 1e-9,
                        },
                    ),
                    y: Integer(
                        IntegerUnit {
                            value: 10,
                            units: 1e-9,
                        },
                    ),
                },
            ],
            layer: Layer(
                1,
            ),
            data_type: DataType(
                0,
            ),
            properties: [],
        },
    ),
    Polygon(
        Polygon {
            points: [
                Point {
                    x: Integer(
                        IntegerUnit {
                            value: 10,
                            units: 1e-9,
                        },
                    ),
                    y: Integer(
                        IntegerUnit {
                            value: 0,
                            units: 1e-9,
                        },
                    ),
                },
                Point {
                    x: Integer(
                        IntegerUnit {
                            value: 20,
                            units: 1e-9,
                        },
                    ),
                    y: Integer(
                        IntegerUnit {
                            value: 0,
                            units: 1e-9,
                        },
                    ),
                },
                Point {
                    x: Integer(
                        IntegerUnit {
                            value: 20,
                            units: 1e-9,
                        },
                    ),
                    y: Integer(
                        IntegerUnit {
                            value: 10,
                            units: 1e-9,
                        },
                    ),
                },
                Point {
                    x: Integer(
                        IntegerUnit {
                            value: 10,
                            units: 1e-9,
                        },
                    ),
                    y: Integer(
                        IntegerUnit {
                            value: 0,
                            units: 1e-9,
                        },
                    ),
                },
            ],
            layer: Layer(
                1,
            ),
            data_type: DataType(
                0,
            ),
            properties: [],
        },
    ),
    Polygon(
        Polygon {
            points: [
                Point {
                    x: Integer(
                        IntegerUnit {
                            value: 10,
                            units: 1e-9,
                        },
                    ),
                    y: Integer(
                        IntegerUnit {
                            value: 10,
                            units: 1e-9,
                        },
                    ),
                },
                Point {
                    x: Integer(
                        IntegerUnit {
                            value: 20,
                            units: 1e-9,
                        },
                    ),
                    y: Integer(
                        IntegerUnit {
                            value: 10,
                            units: 1e-9,
                        },
                    ),
                },
                Point {
                    x: Integer(
                        IntegerUnit {
                            value: 20,
                            units: 1e-9,
                        },
                    ),
                    y: Integer(
                        IntegerUnit {
                            value: 20,
                            units: 1e-9,
                        },
                    ),
                },
                Point {
                    x: Integer(
                        IntegerUnit {
                            value: 10,
                            units: 1e-9,
                        },
                    ),
                    y: Integer(
                        IntegerUnit {
                            value: 10,
                            units: 1e-9,
                        },
                    ),
                },
            ],
            layer: Layer(
                1,
            ),
            data_type: DataType(
                0,
            ),
            properties: [],
        },
    ),
]
